RESOLVED FIXED204543
macCatalyst: REGRESSION (r251320): WebKit-native media controls do not respond to hover or click
https://bugs.webkit.org/show_bug.cgi?id=204543
Summary macCatalyst: REGRESSION (r251320): WebKit-native media controls do not respon...
Tim Horton
Reported 2019-11-22 18:10:28 PST
macCatalyst: REGRESSION (r251320): WebKit-native media controls do not respond to hover or click
Attachments
Patch (29.67 KB, patch)
2019-11-22 18:11 PST, Tim Horton
no flags
Patch (29.67 KB, patch)
2019-11-22 18:13 PST, Tim Horton
no flags
Patch (30.86 KB, patch)
2019-12-04 14:55 PST, Tim Horton
no flags
Patch (30.85 KB, patch)
2019-12-04 18:38 PST, Tim Horton
graouts: review+
Tim Horton
Comment 1 2019-11-22 18:11:15 PST
Tim Horton
Comment 2 2019-11-22 18:11:17 PST
Tim Horton
Comment 3 2019-11-22 18:13:10 PST
Tim Horton
Comment 4 2019-12-04 14:55:43 PST
Tim Horton
Comment 5 2019-12-04 18:38:45 PST
Maciej Stachowiak
Comment 6 2019-12-04 23:06:18 PST
Comment on attachment 384871 [details] Patch Is it feasible to make test cases for this?
Antoine Quint
Comment 7 2019-12-05 02:32:17 PST
Comment on attachment 384871 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=384871&action=review Very nice to see those #if !PLATFORM(IOS_FAMILY) go away! > Source/WebCore/Modules/modern-media-controls/controls/auto-hide-controller.js:63 > + this._mediaControls.element.addEventListener("pointerout", this); I suppose we didn't have `touchcancel` before, but I wonder if we need to handle `pointercancel` here too. > Source/WebCore/Modules/modern-media-controls/controls/auto-hide-controller.js:68 > + this._mediaControls.element.removeEventListener("pointerout", this); We add a `pointerleave` event listener that we don't seem to remove. > Source/WebCore/Modules/modern-media-controls/controls/auto-hide-controller.js:172 > + let disableAutoHiding = this._pointerIdentifiersPreventingAutoHide.size || this._pointerIdentifiersPreventingAutoHideForHover.size; `const` would do here.
Antoine Quint
Comment 8 2019-12-05 02:33:38 PST
(In reply to Maciej Stachowiak from comment #6) > Comment on attachment 384871 [details] > Patch > > Is it feasible to make test cases for this? We already have tests for auto-hide of media controls, so we should be able to extend those to work for the macCatalyst case. However, I don't know what constraints may exist due to this being macCatalyst.
Tim Horton
Comment 9 2019-12-05 03:01:49 PST
(In reply to Antoine Quint from comment #8) > (In reply to Maciej Stachowiak from comment #6) > > Comment on attachment 384871 [details] > > Patch > > > > Is it feasible to make test cases for this? > > We already have tests for auto-hide of media controls, so we should be able > to extend those to work for the macCatalyst case. However, I don't know what > constraints may exist due to this being macCatalyst. The existing tests found a mistake I made, and we don't currently have layout testing for macCatalyst. Possible we could come up with something crazy though.
Tim Horton
Comment 10 2019-12-07 03:22:25 PST
Note You need to log in before you can comment on or make changes to this bug.